Revision history for Perl extension Test::MockObject.

1.07
	Sat Sep  9 21:19:35 UTC 2006 (chromatic)
	- fixed a logging documentation error (Nicholas Clark)

1.06
	Fri Apr 21 01:03:27 UTC 2006 (chromatic)
	- added __get_parents() to list wrapped object's parents in T::M::O::E

1.05
	Sun Apr  9 05:58:52 UTC 2006 (chromatic)
	- fixed anonymous subroutine name interaction with the debugger

1.04
	Sat Mar 18 21:52:52 UTC 2006 (chromatic)
	- made all T::MO::E mocking methods return the invocant (bugfix)
	- moved developer tests under t/developer/ to avoid running by default

1.03
	Sun Mar  5 01:43:20 UTC 2006 (chromatic)
	- removed test dependency on Test::Warn
	- improved signature test
	- improved mock package loading in T::MO::E (RT #17692 from Badgersrc)
	- clarified T::MO::E object wrapping behavior (RT #17929 from Larry Clapp)
	- named generated can() and isa() methods in T::MO::E
	- cleaned up some extraneous whitespace
	- allowed isa() to check reference type of mocked object once again (RT
	  #15446 from PM)
	- avoid circular references preventing mock destruction (RT #17941 from
	  David Pisoni)
	- fixed inherited AUTOLOAD() calls from T::MO::E (RT #14445 from Adam
	  Kennedy)

1.02
	Sat Dec 24 08:36:07 UTC 2005 (chromatic)
	- avoid warnings in UNIVERSAL::isa and UNIVERSAL::can by always calling
	  both as methods (oops)
	- mark dependency on Perl 5.6.0
	- skip signature check without SIGNATURE file
	- remove chdir/library logic from tests and add warnings
	- clean up warnings in t/bugs.t
	- made Test::MockObject::Extends warnings clean

1.01
	Sat Aug 27 03:36:39 UTC 2005 (chromatic)
	- set $AUTOLOAD in parent AUTOLOAD(), if delegating (RT #14251)
	- don't require parent module if it has a new() method
	- use UNIVERSAL::isa and UNIVERSAL::can modules
	- give the installed isa() and can() methods the appropriate names in T::MO

1.00 
	Tue Jul 12 01:49:06 UTC 2005 (chromatic)
	- removed deprecated Test::MockObject::add()