@@ -1,21 +1,24 @@
-#!/usr/bin/perl
+#! perl
 
 use strict;
 use warnings;
-use Scalar::Util qw(weaken);
 
 use Test::More tests => 17;
-
 use Test::MockObject;
-my $mock = Test::MockObject->new();
+
+use Scalar::Util 'weaken';
 
 {
+	my $mock = Test::MockObject->new();
+
 	local $@ = '';
 	eval { $mock->called( 1, 'foo' ) };
 	is( $@, '', 'called() should not die from no array ref object' );
 }
 
 {
+	my $mock = Test::MockObject->new();
+
 	$mock->{_calls} = [ 1 .. 4 ];
 	$mock->_call( 5 );
 	is( @{ $mock->{_calls} }, 4,
@@ -23,6 +26,7 @@ my $mock = Test::MockObject->new();
 }
 
 {
+	my $mock = Test::MockObject->new();
 	my $warn = '';
 	local $SIG{__WARN__} = sub {
 		$warn = shift;
@@ -32,59 +36,67 @@ my $mock = Test::MockObject->new();
 	is( $warn, '', 'fake_module() should catch redefined sub warnings' );
 }
 
-my ($ok, $warn, @diag) = ('') x 2;
 {
-	local (*Test::Builder::ok, *Test::Builder::diag);
-	*Test::Builder::ok = sub {
-		$ok = $_[1];
-	};
+	my ($ok, $warn, @diag) = ('') x 2;
+	{
+		local (*Test::Builder::ok, *Test::Builder::diag);
+		*Test::Builder::ok = sub {
+			$ok = $_[1];
+		};
 
-	*Test::Builder::diag = sub {
-		push @diag, $_[1];
-	};
-	$mock->{_calls} = [ [ 4, 4 ], [ 5, 5 ] ];
+		*Test::Builder::diag = sub {
+			push @diag, $_[1];
+		};
 
-	$mock->called_pos_ok( 2, 8 );
+		my $mock = Test::MockObject->new();
+		$mock->{_calls} = [ [ 4, 4 ], [ 5, 5 ] ];
 
-	local $SIG{__WARN__} = sub {
-		$warn = shift;
-	};
+		$mock->called_pos_ok( 2, 8 );
 
-	$mock->called_pos_ok( 888, 'foo' );
+		local $SIG{__WARN__} = sub {
+			$warn = shift;
+		};
+
+		$mock->called_pos_ok( 888, 'foo' );
+	}
+
+	ok( ! $ok, 'called_pos_ok() should return false if name does not match' );
+	like( $diag[0], qr/Got.+Expected/s, '... printing a helpful diagnostic' );
+	unlike( $warn, qr/uninitialized value/,
+		'called_pos_ok() should throw no uninitialized warnings on failure');
+	like( $diag[1], qr/'undef'/, '... faking it with the word in the error' );
 }
-ok( ! $ok, 'called_pos_ok() should return false if name does not match' );
-like( $diag[0], qr/Got.+Expected/s, '... printing a helpful diagnostic' );
-unlike( $warn, qr/uninitialized value/,
-	'called_pos_ok() should not throw uninitialized value warnings on failure');
-like( $diag[1], qr/'undef'/, '... faking it with the word in the error' );
 
-$mock->clear();
-$mock->set_true( 'foo' );
-my $result;
-$_ = 'bar';
-if (/(\w+)/) {
-	$mock->foo( $1 );
-}
-is( $mock->call_args_pos( -1, 2 ), 'bar', 
-	'$1 should be preserved through AUTOLOAD invocation' );
-
-$mock->fake_module( 'fakemodule' );
 {
+	my $mock = Test::MockObject->new();
+	$mock->set_true( 'foo' );
+	$_ = 'bar';
+	$mock->foo( $1 ) if /(\w+)/;
+	is( $mock->call_args_pos( -1, 2 ), 'bar', 
+		'$1 should be preserved through AUTOLOAD invocation' );
+}
+
+{
+	my $mock = Test::MockObject->new();
+	$mock->fake_module( 'fakemodule' );
 	no strict 'refs';
 	ok( %{ 'fakemodule::' },
 		'fake_module() should create a symbol table entry for the module' );
 }
 
 # respect list context at the end of a series
-$mock->set_series( count => 2, 3 );
-my $i;
-while (my ($count) = $mock->count())
 {
-	$i++;
-	last if $i > 2;
-}
+	my $mock = Test::MockObject->new();
+	$mock->set_series( count => 2, 3 );
+	my $i;
+	while (my ($count) = $mock->count())
+	{
+		$i++;
+		last if $i > 2;
+	}
 
-is( $i, 2, 'set_series() should return false at the end of a series' );
+	is( $i, 2, 'set_series() should return false at the end of a series' );
+}
 
 # Jay Bonci discovered false positives in called_ok() in 0.11
 {
@@ -94,10 +106,10 @@ is( $i, 2, 'set_series() should return false at the end of a series' );
 	};
 
 	my $new_mock = Test::MockObject->new();
-	$result = $new_mock->called_ok( 'foo' );
-}
+	my $result   = $new_mock->called_ok( 'foo' );
 
-is( $result, 0, 'called_ok() should not report false positives' );
+	is( $result, 0, 'called_ok() should not report false positives' );
+}
 
 package Override;
 
@@ -143,4 +155,15 @@ is( $o->foo(), 'foo', '... but should not interfere with method finding' );
 
 	ok( !ref($obj1prime),
 		'... and the caching MO better go away too!' );
+}
+
+# Mutant reported RT #21049 - lack of new() in fake_module() may be a problem
+{
+	my $mock = Test::MockObject->new();
+	local $@;
+
+	$INC{'Some/Module.pm'} = 1;
+	eval { $mock->fake_module( 'Some::Module' ) };
+	like( $@, qr/No mocked subs for loaded module 'Some::Module'/,
+		'fake_module() should throw exception for loaded module without mocks');
 }
