@@ -3,6 +3,8 @@ Revision history for Perl extension Test::MockObject.
 1.07
 	Sat Sep  9 21:19:35 UTC 2006 (chromatic)
 	- fixed a logging documentation error (Nicholas Clark)
+	- made fake_module() croak when mocking a loaded module but not mocking
+	  subs (RT #21049, reported by Mutant)
 
 1.06
 	Fri Apr 21 01:03:27 UTC 2006 (chromatic)
